# website-rs

./: .gitignore  Cargo.toml  docker-compose.yml  main.tf  readme.md
.github/workflows/: build-and-deploy.yml  build_latest.yml  build_tagged.yml  dwbrite-com.yml
api-dwbrite-com/: Cargo.toml  readme.md
api-dwbrite-com/blog/posts/: autopilot.html  death.html  enumerations.html  gifbackgroundifier.html  index.toml  licensing.html  lightboard-v2.html  november-has-come.html  pkmn1.html  pkmn2.html  pkmn3.html  pkmn4.html  research-and-whiteboards.html  the-start-of-something.html  void1.html
api-dwbrite-com/src/: main.rs
api-dwbrite-com/src/blog/: idx_fs_blog.rs  mod.rs
blog/: a.toml
blog/posts/: gifbackgroundifier.toml  lightboard-v2.toml  november-has-come.toml  pkmn1.toml  pkmn2.toml  pkmn3.toml  the-start-of-something.toml
charts/dwbrite-com/: Chart.yaml  values.yaml
charts/dwbrite-com/templates/: _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml
common/: Cargo.toml
common/src/: html.rs  lib.rs  media.rs
dwbrite-com/: .gitattributes  Cargo.toml  Dockerfile
dwbrite-com/.well-known/: 4E364CAA147E0A620603417331DC69A38FBDD143.asc  keybase.txt
dwbrite-com/blog/media/: void.m4v  void.webm
dwbrite-com/blog/posts/: autopilot.toml  death.toml  enumerations.toml  gifbackgroundifier.toml  lightboard-v2.toml  opi5-cluster.toml  pkmn1.toml  pkmn2.toml  pkmn3.toml  pkmn4.toml  quick-transition.toml  research-and-whiteboards.toml  rust-retrospective.toml  the-start-of-something.toml  void1.toml
dwbrite-com/resources/css/: _base_colors.scss  _media.scss  _prism.scss  _structures.scss  _typography.scss  styles.scss
dwbrite-com/resources/prism/: prism_unobfuscated.js
dwbrite-com/resources/scripts/: image_loader.js  parallax.js  (+1 more)
dwbrite-com/resume/: _paper.scss  index.html  styles.scss
dwbrite-com/src/: blog.rs  main.rs
dwbrite-com/templates/: base.html.tera  blog.html.tera  home.html.tera
img-dwbrite-com/: Cargo.toml
img-dwbrite-com/src/: main.rs
infrastructure/: .terraform.lock.hcl  README.md  main.tf  nginx_values.template.yml  providers.tf  variables.tf
infrastructure/0-cluster/: _providers.tf  _variables.tf  dewbrite.auto.tfvars  main.tf
infrastructure/1-bootstraps/: _providers.tf  _variables.tf  dewbrite.auto.tfvars  main.tf
infrastructure/2-dwbrite-com/: _providers.tf  main.tf
infrastructure/2-matrix/: dewbrite.auto.tfvars  matrix.tf
infrastructure/2-outline/: _providers.tf  values.template.yml
infrastructure/container-registry/: main.tf  values.template.yml
infrastructure/container_registry/: docker_pass  main.tf  values.template.yml
infrastructure/firefly_iii/: main.tf
infrastructure/matrix/: main.tf  values.template.yml
infrastructure/plex/: main.tf
infrastructure/website_rs/: main.tf
media-dwbrite-com/: Cargo.toml  Dockerfile  index.html  openapi.yaml  registry.toml
media-dwbrite-com/src/: api.rs  main.rs
resources/css/: _structures.scss  _typography.scss  bg_dark.scss  bg_light.scss  styles.css  styles.css.map  styles.scss
resources/scripts/: add_fonts.js  parallax.js
src/: blog.rs  main.rs
templates/: base.html.tera  blog.html.tera  home.html.tera
(+14 files in other folders)
