[package]
name = "website-rs"
version = "0.1.0"
authors = ["Devin Brite <devin@dwbrite.com>"]
edition = "2018"

[dependencies]
rocket = { version = "0.4.6" }
rocket_contrib = { version = "0.4.6", default-features = false, features = ["serve", "tera_templates"] }
serde = { version = "1.0", features = ["derive", "rc"] }
toml = "0.5.8"
chrono = "0.4.19"