[package]
name = "common"
version = "0.1.0"
authors = ["Devin Brite <devin@dwbrite.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.8" }
rocket_contrib = { version = "0.4.8", default-features = false, features = ["serve", "tera_templates", "json"] }

reqwest = { version="0.11.0", features = ["blocking"] }
regex = "1.4.3"

serde = { version = "1.0", features = ["derive", "rc"] }
toml = "0.5.8"

chrono = "0.4.19"
url = "2.2.0"
