[package]
name = "media-dwbrite-com"
version = "0.1.0"
authors = ["Devin Brite <devin@dwbrite.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket-multipart-form-data = "0.9.6"
image = "0.23.12"
common = { path = "../common" }
serde = { version = "1.0", features = ["derive", "rc"] }

[dev-dependencies]
rstest = "0.6.4"
